# python-basic-hw

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: step_app_test.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  main.py  pyproject.toml
homework_03/views/: base_route.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: .dockerignore  Dockerfile  docker-compose.yaml  requirements.txt
homework_06/app/: app.py  config.py  main.py  requirements.txt
homework_06/app/models/: __init__.py  bills.py  database.py  users.py
homework_06/app/templates/: add.html  base.html  bills.html  index.html  user_info.html  user_list.html  users.html
homework_06/app/views/: bills.py  users.py
homework_07/: requirements.txt
homework_07/step/: README.md
homework_07/step/stafftrain/: apps.py  models.py  views.py
homework_07/step/step/: settings.py  urls.py
homework_07/step/templates/: base.html
homework_07/step/users/: admin.py  forms.py  models.py  views.py
homework_08/step/: README.md
homework_08/step/stafftrain/: admin.py  models.py  tests.py  views.py
homework_08/step/step/: asgi.py  settings.py  urls.py
homework_08/step/templates/: base.html
homework_08/step/users/: forms.py  views.py
homework_09/step/: README.md
homework_11/: .gitlab-ci.yml
homework_11/step/: manage.py  requirements-dev.txt
(+49 files in other folders)
