[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = "Homework_03 solution"
authors = ["Macushiro <tolmachevkonstantin@gmail.com>"]
license = "x.03"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.1"
uvicorn = "0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
